--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-PATH_FILE ="C:\podcasts"
+#pathlib
+PATH_FILE="C:\podcasts"
+
+#kafka
+KAFKA_TOPIC="muezzin"
+KAFKA_BOOTSTRAP_SERVERS="localhost:9092"
