--- a/.env
+++ b/.env
@@ -4,5 +4,16 @@ PATH_FILE="C:\podcasts"
 #kafka
 KAFKA_TOPIC="muezzin"
 KAFKA_BOOTSTRAP_SERVERS="localhost:9092"
+KAFKA_GROUP="muezzin-group"
 
 #elastic
+ELASTIC_HOST="http://localhost:9200"
+ELASTIC_INDEX="muezzin"
+ELASTIC_USER="elastic"
+ELASTIC_PASSWORD="pass"
+
+
+
+#mongo
+MONGO_URI="mongodb://localhost:27017"
+DB_NAME="muezzin"
