add: transcribe file that converts audio to text, fix: logs for all the code from end to end

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #pathlib
-PATH_FILE="C:\podcasts"
+PATH_FILE="C:\\podcasts"
 
 #kafka
 KAFKA_TOPIC="muezzin"
@@ -12,7 +12,11 @@ ELASTIC_INDEX="muezzin"
 ELASTIC_USER="elastic"
 ELASTIC_PASSWORD="pass"
 
-
 #mongo
-MONGO_URI="mongodb://localhost:27017"
+MONGO_URI="mongodb://localhost:27017/"
 DB_NAME="muezzin"
+
+#logger
+NAME_LOG="muezzin_logger"
+ES_HOST_LOG="http://localhost:9200"
+INDEX_LOG="muezzin_logs"
